--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
             <td><a href="https://www.postfix.org/smtp-smuggling.html">https://www.postfix.org/smtp-smuggling.html</a></td>
         </tr>
         <tr>
+            <td>Cisco status</td>
+            <td><a href="https://bst.cisco.com/quickview/bug/CSCwh10142">https://bst.cisco.com/quickview/bug/CSCwh10142</a></td>
+        </tr>
+        <tr>
             <td>SMTP smuggling and Exchange (DE)</td>
             <td><a href="https://www.msxfaq.de/internet/smtp_smuggling_exchange.htm">https://www.msxfaq.de/internet/smtp_smuggling_exchange.htm</a></td>
         </tr>
