--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
 <div class="w3-main" style="margin-left:250px">
 
   <div class="w3-row w3-padding-top-64">
+    <div class="w3 w3-container">
+      <h1 class="w3-text-red">Under construction!</h1>
+      <h3 class="w3-text-red">This website is currently under construction! Displayed information is not final! Also, please do NOT share this page yet!</h3>
+    </div>
+  </div>
+  
+  <div class="w3-row w3-padding-top-64">
     <div class="w3-row w3-bar w3-black">
         <h1 class="w3-bar-item">SMTP Smuggling</h1>
     </div>
