--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
   <a class="w3-bar-item w3-button w3-hover-black" href="#videos">Videos</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#scanner">Scanner</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#comingsoon">Coming soon...</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="#imprint">Imprint</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="#privacy">Privacy Policy</a>
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -53,13 +55,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
 <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
 <div class="w3-main" style="margin-left:250px">
 
-  <div class="w3-row w3-padding-top-64">
-    <div class="w3 w3-container">
-      <h1 class="w3-text-red">Under construction!</h1>
-      <h3 class="w3-text-red">This website is currently under construction! Displayed information is not final! Also, please do NOT share this page yet!</h3>
-    </div>
-  </div>
-  
   <div class="w3-row w3-padding-top-64">
     <div class="w3-row w3-bar w3-black">
         <h1 class="w3-bar-item">SMTP Smuggling</h1>
@@ -235,6 +230,36 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
     </div>
   </div>
 
+  <div class="w3-row">
+    <div class="w3-container">
+      <h1 class="w3-text-black" id="imprint">Imprint</h1>
+      <p>
+      <b>company name</b> SEC Consult Unternehmensberatung GmbH<br>
+      <b>business purpose</b> IT-Dienstleistungen / Unternehmensberatung<br>
+      <b>VAT number</b> ATU56165223<br>
+      <b>tax number</b> 330 214 628<br>
+      <b>registration number</b> FN 227896t<br>
+      <b>commerical court</b> Handelsgericht Wien<br>
+      <b>DVR</b> 3004017<br>
+      <b>address</b> Wagramer Straße 19 / Stock 16 | 1220 Wien<br>
+      <b>eMail</b> office(at)sec-consult.com<br>
+      <b>phone</b> +4318903043 0 <br>
+      <b>web</b> www.sec-consult.com<br>
+      <b>membership of chamber of commerce</b> Wirtschaftskammer Wien Fachgruppe: Unternehmensberatung und Informationstechnologie<br>
+      <b>applicable law</b> Gewerbeordnung<br>
+      <b>management</b> Wolfgang Baumgartner <br>
+      <b>data protection officer</b> dpo-austria(at)atos.net<br>
+      </p>
+    </div>
+  </div>
+
+  <div class="w3-row">
+    <div class="w3-container">
+      <h1 class="w3-text-black" id="privacy">Privacy Policy</h1>
+      <p>This website is hosted via GitHub Pages! Please refer to GitHub's <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">privacy statement</a> and <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#data-collection">data collection</a> methods.</p>
+    </div>
+  </div>
+  
   <footer id="myFooter">
     <div class="w3-container w3-theme-l1">
       <p>> SMTP SMUGGLING EOD</p>
