--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
   <a class="w3-bar-item w3-button w3-hover-black" href="#references">References</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#videos">Videos</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#scanner">Scanner</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="#contribute">Contribute</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#comingsoon">Coming soon...</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#imprint">Imprint</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#privacy">Privacy Policy</a>
@@ -154,7 +155,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
         </tr>
         <tr>
             <td><b>Possibly more!</b></td>
-            <td>Please help us to identify more vulnerable SMTP software by using the <a href="#tools">provided tools</a>. If you're vulnerable and using software that is not already in this list, please drop Timo a message on <a href="https://infosec.exchange/@login">Mastodon</a> or <a href="https://twitter.com/timolongin">X</a>.</td>
+            <td>Please help us to identify more vulnerable SMTP software by using the <a href="#tools">provided tools</a>. If you're vulnerable and using software that is not already in this list, please create an issue on <a href="https://github.com/The-Login/SMTP-Smuggling-Website">GitHub</a>.</td>
             <td></td>
             <td></td>
             <td></td>
@@ -223,6 +224,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
     </div>
   </div>
 
+  <div class="w3-row">
+    <div class="w3-container">
+      <h1 class="w3-text-black" id="contribute">Contribute</h1>
+      <p>Want to make changes to this website? Great, contributions are highly appreciated! Please create issues and pull requests on <a href="https://github.com/The-Login/SMTP-Smuggling-Website">GitHub</a>.</p>
+    </div>
+  </div>
+  
   <div class="w3-row">
     <div class="w3-container">
       <h1 class="w3-text-black" id="comingsoon">Coming soon...</h1>
