--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
     <div class="w3-container">
       <h1 class="w3-text-black" id="vulnerable">I'm vulnerable! What now?</h1>
       <p>The <b><a href="#software">Affected Software</a></b> section may include the information you are looking for. Furthermore, there may already be fixes and workarounds for your specific SMTP software online.<br>
-        If you don't find any solutions online, please drop Timo a message on <b><a href="https://infosec.exchange/@login">Mastodon</a></b> or <b><a href="https://twitter.com/timolongin">X</a></b> (temporary solution).
+        If you don't find any solutions online, please create an issue on <a href="https://github.com/The-Login/SMTP-Smuggling-Website">GitHub</a>.
       </p>
     </div>
   </div>
