--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-black" id="scanner1">Scanner</h1>
+      <h1 class="w3-text-black" id="scanner">Scanner</h1>
       <p><i>The scanner is currently under review! In the meantime, check out the other available <a href="#tools">tools</a>.</i></p>
       <!--p>Scan your receiving/inbound SMTP server for SMTP smuggling!</p>
       <p>How does this work? This scanner is a web-based version of the <b><a href="https://github.com/The-Login/SMTP-Smuggling-Tools">SMTP smuggling scanner on GitHub</a></b> and works by sending a number of test e-mails to your provided e-mail address. You will receive e-mails coming from <b class="w3-text-green">test@check.smtpsmuggling.com</b> and, if you're vulnerable, you will also receive one or more e-mails from <b class="w3-text-red">smuggled@check.smtpsmuggling.com</b>. Note that the supplied e-mail address is only used for scanning purposes and won't be stored in any way!</p>
