--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
         <tr>
             <td>Exim</td>
             <td>Some configurations of Exim are vulnerable to SMTP smuggling similar to Postfix and Sendmail.</td>
-            <td>Upgrading to Exim version 4.97.1 or later should fix this issue.</td>
+            <td>Upgrading to Exim version 4.97.1 or later should fix this issue. More information can be found on the <a href="https://www.exim.org/">Exim website</a></td>
             <td>Inbound</td>
             <td><a href="https://nvd.nist.gov/vuln/detail/CVE-2023-51766">CVE-2023-51766</a></td>
         </tr>
         <tr>
             <td>SurgeMail</td>
             <td>SurgeMail is vulnerable to SMTP smuggling similar to Postfix and Sendmail.</td>
-            <td>More information on fixing SurgeMail can be found <a href="https://surgemail.com/knowledge-base/smtp-smuggling/">here</a>.</td>
+            <td>More information on fixing SurgeMail can be found on the<a href="https://surgemail.com/knowledge-base/smtp-smuggling/">SurgeMail website</a>.</td>
             <td>Inbound</td>
             <td>-</td>
         </tr>
