--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
   <div class="w3-row">
     <div class="w3-container">
       <h1 class="w3-text-black" id="software">Affected Software</h1>
+      <p>Official vendor statements can also be found in CERT/CC's <a href="https://www.kb.cert.org/vuls/id/302671#vendor-information">vulnerability note</a>. However, keep in mind that there are "different views" on the vulnerability (e.g., Cisco).</p>
       <table class="w3-table w3-table-all">
         <tr>
             <th>Software</th>
@@ -114,7 +115,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
         <tr>
             <td>Cisco Secure Email (Cloud) Gateway</td>
             <td>On-premise and cloud versions of Cisco Secure Email Gateway using the default configuration are vulnerable to <b>severe</b> inbound SMTP smuggling, since end-of-data sequences like "&lt;CR&gt;.&lt;/CR&gt;" are accepted. This allows spoofing e-mails from millions of domains. More information can be found in the <a href="https://sec-consult.com/blog/detail/smtp-smuggling-spoofing-e-mails-worldwide/">original blog post</a>.</td>
-            <td>The option <a href="https://www.cisco.com/c/en/us/td/docs/security/esa/esa15-0/user_guide/b_ESA_Admin_Guide_15-0/b_ESA_Admin_Guide_12_1_chapter_0100.html?bookSearch=true#task_1254814__table_985308C400C84CE3BC190BC8A3A95D86">"CR and LF Handling"</a> must be reconfigured to "Reject" or "Allow" (deprecated). However, due to <a href="https://community.cisco.com/t5/email-security/cisco-cisco-secure-email-cloud-gateway-vulnerable-to-smtp/td-p/4982174">known drawbacks</a>, we are currently evaluating other workarounds. This issue will <a href="https://bst.cisco.com/quickview/bug/CSCwh10142">most likely not be addressed</a> by Cisco in the near future.</td>
+            <td>The option <a href="https://www.cisco.com/c/en/us/td/docs/security/esa/esa15-0/user_guide/b_ESA_Admin_Guide_15-0/b_ESA_Admin_Guide_12_1_chapter_0100.html?bookSearch=true#task_1254814__table_985308C400C84CE3BC190BC8A3A95D86">"CR and LF Handling"</a> must be reconfigured to "Reject" or "Allow" (deprecated). However, due to <a href="https://community.cisco.com/t5/email-security/cisco-cisco-secure-email-cloud-gateway-vulnerable-to-smtp/td-p/4982174">known drawbacks</a>, we are currently evaluating other workarounds. This issue will <a href="https://www.cisco.com/c/en/us/support/docs/security/email-security-appliance-c690x/221532-response-to-cisco-secure-email-smtp-smug.html">most likely not be addressed</a> by Cisco in the near future.</td>
             <td>Inbound</td>
             <td>-</td>
         </tr>
