--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
   <div class="w3-row">
     <div class="w3-container">
       <h1 class="w3-text-black" id="software">Affected Software</h1>
-      <p>Official vendor statements can also be found in CERT/CC's <a href="https://www.kb.cert.org/vuls/id/302671#vendor-information">vulnerability note</a>. However, keep in mind that there are "different views" on the vulnerability (e.g., Cisco).</p>
+      <p>Official vendor statements can be found in CERT/CC's <a href="https://www.kb.cert.org/vuls/id/302671#vendor-information">vulnerability note</a>. However, keep in mind that there are "different views" on the vulnerability (e.g., Cisco).</p>
       <table class="w3-table w3-table-all">
         <tr>
             <th>Software</th>
