Added "Unaffected Software" section

--- a/index.html
+++ b/index.html
@@ -174,6 +174,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
+      <h1 class="w3-text-black" id="software">Unaffected Software</h1>
+      <p>Here is a list of software that was confirmed to be unaffected by SMTP smuggling.<br>
+        <b>However</b>, keep in mind that constellations with multiple SMTP servers could again introduce SMTP smuggling issues.</p>
+      <table class="w3-table w3-table-all">
+        <tr>
+            <th>Software</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>qmail</td>
+            <td>Vanilla qmail was confirmed to be unaffected by SMTP smuggling.</td>
+      </tr>
+      </table>
+    </div>
+  </div>
+
+  <div class="w3-row">
+    <div class="w3-twothird w3-container">
       <h1 class="w3-text-black" id="references">References</h1>
       <table class="w3-table w3-table-all">
         <tr>
