Updated "Unaffected Software" section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
   <a class="w3-bar-item w3-button w3-hover-black" href="#tools">Tools</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#vulnerable">I'm vulnerable! What now?</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#software">Affected Software</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="#unaffected-software">Unaffected Software</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#references">References</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#videos">Videos</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="#scanner">Scanner</a>
@@ -174,7 +175,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;scroll-margin: 40
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-black" id="software">Unaffected Software</h1>
+      <h1 class="w3-text-black" id="unaffected-software">Unaffected Software</h1>
       <p>Here is a list of software that was confirmed to be unaffected by SMTP smuggling.<br>
         <b>However</b>, keep in mind that constellations with multiple SMTP servers could again introduce SMTP smuggling issues.</p>
       <table class="w3-table w3-table-all">
